# cipherTrader

./: .clang-format  CMakeLists.txt  README.md  compile_commands.json  docker-compose.yml
arbitrage/: .gitignore  CMakeLists.txt  main.cpp  market_data.hpp  root_certificates.hpp  websocket_client.hpp
include/: API.hpp  Api.hpp  App.hpp  Auth.hpp  Broker.hpp  Cache.hpp  Candle.hpp  Config.hpp  DB.hpp  DynamicArray.hpp  Enum.hpp  Exception.hpp  Exchange.hpp  Helper.hpp  Indicator.hpp  Info.hpp  LimitOrderbook.hpp  Logger.hpp  Order.hpp  Orderbook.hpp  Position.hpp  Precompiled.hpp  Redis.hpp  Route.hpp  SQLLogger.hpp  Ticker.hpp  Timeframe.hpp  Trade.hpp
migrations/: 001_create_candles_down.sql  001_create_candles_up.sql  002_create_closed_trades_down.sql  002_create_closed_trades_up.sql  003_create_daily_balances_down.sql  003_create_daily_balances_up.sql  004_create_exchange_api_keys_down.sql  004_create_exchange_api_keys_up.sql  005_create_logs_down.sql  005_create_logs_up.sql  006_create_notification_api_keys_down.sql  006_create_notification_api_keys_up.sql  007_create_options_down.sql  007_create_options_up.sql  008_create_orderbooks_down.sql  008_create_orderbooks_up.sql  009_create_tickers_down.sql  009_create_tickers_up.sql  010_create_trades_down.sql  010_create_trades_up.sql  011_create_orders_down.sql  011_create_orders_up.sql
src/: Api.cpp  App.cpp  Auth.cpp  Broker.cpp  Cache.cpp  Candle.cpp  Config.cpp  DB.cpp  DynamicArray.cpp  Enum.cpp  Enums.cpp  Exchange.cpp  Helper.cpp  Indicator.cpp  Info.cpp  Logger.cpp  Order.cpp  Orderbook.cpp  Position.cpp  Redis.cpp  Route.cpp  Ticker.cpp  Timeframe.cpp  Trade.cpp
strategies/MyStrategy/: main.cpp
tests/: Candle_test.cpp  Config_test.cpp  DB_Test.cpp  DynamicArray_test.cpp  Exchange_tests.cpp  Helper_test.cpp  Indicator_test.cpp  Orderbook_test.cpp  Setup.cpp  Timeframe_test.cpp
tests/data/: TestCandlesIndicators.hpp
